--- a/public/register.html
+++ b/public/register.html
@@ -16,26 +16,22 @@
         </form>
         <p>Уже есть аккаунт? <a href="login.html">Войдите</a></p>
         <script>
-            document.getElementById('register-form').addEventListener('submit', async (e) => {
+            document.getElementById('register-form').addEventListener('submit', (e) => {
                 e.preventDefault();
                 const username = document.getElementById('register-username').value;
                 const password = document.getElementById('register-password').value;
-
-                try {
-                    const response = await fetch('/users', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ username, password })
-                    });
-                    if (!response.ok) {
-                        throw new Error(`HTTP error! status: ${response.status}`);
-                    }
-                    alert('Регистрация успешна!');
-                    window.location.href = 'login.html';
-                } catch (error) {
-                    console.error('Registration error:', error);
-                    alert('Ошибка регистрации: ' + error.message);
-                }
+                let users = JSON.parse(localStorage.getItem('users')) || [];
+                const newUser = {
+                    id: users.length > 0 ? Math.max(...users.map(user => user.id)) + 1 : 1,
+                    username: username,
+                    password: password,
+                    avatarURL: 'default-avatar.svg',
+                    description: ''
+                };
+                users.push(newUser);
+                localStorage.setItem('users', JSON.stringify(users));
+                alert('Регистрация успешна!');
+                window.location.href = 'login.html';
             });
         </script>
     </div>
