add about us and links

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
             <a href="/">Главная</a>
             <a href="profile.html">Профиль</a>
             <a href="search.html">Поиск</a>
+            <a href="about.html">О нас</a>
             <a href="#" id="logout-link">Выйти</a>
         </nav>
     </header>
