modify about page

--- a/public/about.html
+++ b/public/about.html
@@ -29,7 +29,51 @@
                 <li>Загрузка и публикация фотографий.</li>
                 <li>Просмотр ленты новостей с фотографиями ваших друзей и коллег.</li>
                 <li>Создание личного профиля с описанием и аватаркой.</li>
+                <li>Возможность поиска пользователей и просмотра их публикаций.</li>
+                <li>Размещение ссылок на социальные сети в своем профиле.</li>
             </ul>
+
+            <h2>О ЕАСИ</h2>
+            <img src="eaca_academy.jpg" alt="Фотография ЕАСИ" class="academy-photo">
+            <p>
+                Миссия академии - служение интересам Екатеринбурга, развитие творческого интеллектуального потенциала
+                города,
+                консолидация усилий научно-педагогической, управленческой и культурной элиты для подготовки
+                профессионалов
+                высокого уровня, владеющих современными технологиями трансформации социокультурных процессов и
+                пространств.
+            </p>
+            <p>
+                Учреждение и развитие академии есть условие реализации муниципальнои политики в сфере культуры в
+                контексте
+                Стратегического плана развития Екатеринбурга и Стратегической программы «Екатеринбург - мегаполис
+                культуры и
+                искусства».
+            </p>
+            <p>
+                Вуз создан в 2006 году для подготовки квалифицированных специалистов, способных эффективно решать
+                актуальные
+                задачи развития культурного пространства города.
+            </p>
+            <p>
+                ЕАСИ - единственный муниципальный вуз в Уральском регионе, драйвер развития культурного пространства
+                города
+                сразу в трех направлениях.
+            </p>
+            <p>
+                ЕАСИ - это качественное образование. Здесь ведется практикоориентированная подготовка современных
+                специалистов культуры для всех участников креативного кластера Екатеринбурга.
+            </p>
+            <p>
+                ЕАСИ - это динамично развивающаяся научно-исследовательская площадка для изучения трендов развития
+                аудитории
+                культуры и постиндустриальных пространств мегаполисов.
+            </p>
+            <p>
+                ЕАСИ - это активно функционирующая «фабрика» современного искусства, поставляющая социокультурные
+                проекты и
+                творческие произведения на различные культурные площадки Екатеринбурга
+            </p>
         </section>
         <script>
             document.addEventListener('DOMContentLoaded', function () {
